--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT = 8000
-mongodbAddress = "mongodb+srv://shivam1234:shivam1234@cluster0.7bjpjfr.mongodb.net/?retryWrites=true&w=majority"
+mongodbAddress = ""
 SECRET_KEY = qwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjkl
+Right now it is public repo so I remove original databased name as it contains password too, But for checking Purposed You can add your's after cloning it 
+locally if thats needed
